# Latency-Reduction-Controller

./: .gitignore  DUAL-LICENSING.md  LICENSE-COMMERCIAL.md  README.md  pyproject.toml
.github/workflows/: windows.yml
packaging/msix/: AppxManifest.xml  install_msix.ps1  make_msix.ps1  sign_msix.ps1
scripts/bench/: run_bench.py
scripts/bench/win/: bg_disk.ps1  bg_net.ps1  fg_burst.ps1
src/lrc/: __init__.py  agent.py  capabilities.py  cli.py  config.py  controller.py  metrics.py  os_win.py  safety.py
tests/: test_controller_basics.py  test_metrics_shapes.py
