[project]
name = "latency-reduction-controller"
version = "0.1.0"
description = "Windows-first latency optimizer with transparent control law"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "The World's Data Company" }]
license = { text = "GPL-3.0-or-later OR Commercial" }
dependencies = [
  "psutil>=5.9",
  "pywin32>=306; platform_system=='Windows'",
  "pynvml>=11.0.0; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pyinstaller>=6.0",
]

[project.scripts]
lrc = "lrc.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
